Attempt to fix scrollbar on overflow:hidden disappearing and causing rest of document to shift to take up its missing space

--- a/frontend/src/components/LoginFormModal/SignupLoginForm.css
+++ b/frontend/src/components/LoginFormModal/SignupLoginForm.css
@@ -24,7 +24,7 @@ div.signup-form, div.login-form {
 	max-height: 682px;
 	height: 682px;
 	align-self: center;
-	overflow-y:scroll;
+	overflow-y:hidden;
 }
 
 .login-form{
